# nornir-workshop

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  session-details.example
edit-config-data/: acl.yaml
inventory/: hosts.yaml
jupyter/: constants.py  link.py  topology.csv  topology.py  utils.py  workshop.ipynb
jupyter/inventory/: defaults.yaml  groups.yaml  hosts.yaml
nc_workshop/: gather_commands.py  interface.py  sandbox.py
scripts/: config.yaml  netconf.py
