[tool.poetry]
name = "nr-workshop"
version = "0.1.0"
description = ""
authors = ["Dmitry Figol <git@dmfigol.me>"]

[tool.poetry.dependencies]
python = "~3.7"
nornir = { git = "https://github.com/nornir-automation/nornir.git", branch = "develop" }
colorama = "^0.4"
textfsm = "^1"
matplotlib = "^3"
requests = "^2"
networkx = "^2"
ncclient = "^0.6"
lxml = "^4"

[tool.poetry.dev-dependencies]
bpython = "^0.18.0"
pdbpp = "^0.10.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
